--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build src/*.html --public-url /goit-react-hw-01-components/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
