--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://github.com/Danatey/goit-react-hw-01-components",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build src/*.html --public-url /goit-react-hw-01-components/",
+    "build": "react-scripts build src/*.html --build-url /goit-react-hw-01-components/",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
@@ -54,8 +54,8 @@
     "prop-types": "^15.7.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,css,md,jsx}": "prettier --write"
   },
   "files.autoSave": "onFocusChange",
   "editor.formatOnSave": true,
